--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="images/joystick_game_3819.png"/>
     <link rel="stylesheet" href="styles.css" />
     <title>Rock,Paper,Scissors</title>
   </head>
