--- a/indexImproved.html
+++ b/indexImproved.html
@@ -14,9 +14,12 @@
     <main>
         <section>
     <div class="rock"> ROCK</div>
-    <div>PAPER</div>
-    <div>SCISSORS</div>
+    <div class="paper">PAPER</div>
+    <div class="scissors">SCISSORS</div>
 </section>
+<div class="button-container">
+<button class="start-game">Enter</button>
+</div>
     </main>
     
 </body>
