added space bar functio

--- a/indexImproved.html
+++ b/indexImproved.html
@@ -16,11 +16,12 @@
     <div class="rock"> ROCK</div>
     <div class="paper">PAPER</div>
     <div class="scissors">SCISSORS</div>
+   
 </section>
 <div class="button-container">
-<button class="start-game">Enter</button>
+<button class="start-game">Press the Space Bar to Enter</button>
 </div>
     </main>
-    
+    <script src="improved.js"></script>
 </body>
 </html>
